crates/aranya-policy-compiler/tests/data/scoping/if_block_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
3 |     return x // x should not exist in the outer scope
  |            ^ 'x' not in scope
